--- a/app/public_html/css/topbar.css
+++ b/app/public_html/css/topbar.css
@@ -13,6 +13,12 @@ Green:
   font-style: normal;
 }
 
+img {
+    height: 50px;
+    margin-left: 20px;
+    margin-top: 5px;
+}
+
 body {
   font-family: "PT Sans", Arial, serif;
   font-weight: 300;
@@ -25,7 +31,7 @@ body {
   position: relative;
 }
 
-a {
+a:not(.call-to-action a) {
   color: #76b852;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
