Implement sections architecture

--- a/app/public_html/css/table.css
+++ b/app/public_html/css/table.css
@@ -1,28 +1,8 @@
 
-
-.limiter {
-  width: 100%;
-  margin: 0 auto;
-}
-
-.container-table {
-  width: 100%;
-  min-height: 100vh;
-  background: #d1d1d1;
-
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  padding: 33px 30px;
-}
-
 .wrap-table {
   width: 1300px;
+  background-color: #FFF;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 table {
