--- a/app/public_html/css/testui.css
+++ b/app/public_html/css/testui.css
@@ -72,3 +72,9 @@ button[type='submit'] {
 button[type='submit']:hover, button[type='submit']:active {
   background: #ff5d00;
 }
+
+
+table {
+    font-size: 20px;
+    text-align: center;
+}
